--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
-    "test": "mocha --timeout 10000"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "mocha --timeout 15000"
   },
   "keywords": [],
   "author": "",
