--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,11 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "mocha --timeout 15000"
+    "test": "mocha --timeout 20000"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "@huggingface/inference": "^4.13.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "chai": "^4.5.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -25,7 +26,6 @@
     "redis": "^5.9.0"
   },
   "devDependencies": {
-    "chai": "^6.2.0",
     "mocha": "^11.7.4",
     "nodemon": "^3.0.1",
     "supertest": "^7.1.4"
