--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "mocha --timeout 20000"
+    "test": "set NODE_ENV=test&&mocha --timeout 60000"
   },
   "keywords": [],
   "author": "",
