--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
+      - REDIS_PASSWORD=mypassword
+      - REDIS_USERNAME=default
   frontend:
     build: ./frontend
     env_file:
@@ -27,6 +29,9 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+    command: redis-server --requirepass mypassword
+    environment:
+      - REDIS_PASSWORD=mypassword
 
 volumes:
   redis_data:
